--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -20,7 +20,7 @@
     align-items: center;
     border: none;
     cursor: pointer;
-    font: inherit;   
+    font: inherit;
     padding: 0.625rem 1rem;
     background: #4255ff;
     color: #fff;
@@ -34,7 +34,7 @@
     }
 }
 
-.inherit { 
+.inherit {
     padding: 0.75rem 1.5rem;
 }
 
@@ -53,15 +53,15 @@
 
 .secondary{
     border: 0.0625rem solid #d9dde8;
-    background: $--gray-100-twilight-900;
-    color: $--gray-600-gray-200;
+    background: var(--gray-100-twilight-900);
+    color: var(--gray-600-gray-200);
 
     &:hover {
-        background: $--gray-300-gray-700;
+        background: var(--gray-300-gray-700);
     }
-    
+
     &:active {
-        background: $--gray-400-gray-800;
+        background: var(--gray-400-gray-800);
     }
 }
 .success{}
@@ -100,7 +100,7 @@
 }
 
 .medium, .large, .fullWidth {
-    border-radius: 0.5rem; 
+    border-radius: 0.5rem;
     font-weight: 600;
 }
 .small, .medium, .large, .fullWidth {
